crates/compiler/test_syntax/tests/snapshots/fail/ability_first_demand_not_indented_enough.expr.roc
MEq has
eq : a, a -> U64 | a has MEq

1
